tests/rosetta/out/Scala/100-doors.error
scalac: exit status 1
/tmp/100-doors.scala:11: error: value unary_! is not a member of Any
        doors(idx) = !(doors).apply(idx)
                     ^
/tmp/100-doors.scala:19: error: type mismatch;
 found   : Any
 required: Boolean
        if ((doors).apply(idx)) {
                         ^
two errors found
